--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				<li><%= link_to 'Assignments', assignments_path %></li>
 				<li><%= link_to 'Log Out', logout_path, method: :delete %></li>
 			<% else %>
-				<li><%= link_to 'Log In', '/auth/familysearch' %></li>
+				<li><%= link_to 'Log In', login_path %></li>
 			<% end %>
 		</ul>
 		<div style="clear:both"></div>
