Make rows clickable to demo hiding related rows on the main page.  Fix error on the main page when the user has no reservations (because FS changed to now return HTTP code 204 and gives us a null value dereference)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,4 +58,12 @@ ul#menu li {
 	margin: 0px;
 	background-color: lightgray;
 }
- 
+
+.ord_row {
+  height: 0;
+  display: block;
+  -webkit-transition: height 1.4s ease-out;
+  -moz-transition: height 1.4s ease-out;
+  transition: all 1.4s ease-out;
+}
+
